# pymde

./: .flake8  .gitignore  README.md  import_pymde.py  import_torch.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml  run_tests.yaml
doc/: Makefile
doc/source/: .conf.py.swp  .index.rst.swp  conf.py  index.rst
doc/source/api/: index.rst
docs/: .buildinfo  CNAME  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js  pygments.css
docs/api/: index.html
docs/citing/: index.html
docs/datasets/: index.html
docs/examples/: index.html
docs/getting_started/: index.html
docs/installation/: index.html
docs/mde/: index.html
docs/preprocess/: index.html
docs_src/: Makefile
docs_src/source/: conf.py  index.rst
examples/: counties.ipynb  drawing_graphs.ipynb  fashion_mnist.ipynb  google_scholar.ipynb  mnist.ipynb  population_genetics.ipynb  single_cell_genomics.ipynb  updating_an_existing_embedding.ipynb
examples/scripts/: preprocess_counties_data.ipynb
pymde/: __init__.py  average_distortion.py  benchmark.py  constraints.py  datasets.py  experiment_utils.py  lbfgs.py  optim.py  problem.py  quadratic.py  recipes.py  test_optim.py  test_quadratic.py  test_recipes.py  test_util.py  testing.py  util.py
pymde/functions/: __init__.py  function.py  losses.py  penalties.py
pymde/preprocess/: __init__.py  _graph.pyx  data_matrix.py  generic.py  graph.py  preprocess.py  test_data_matrix.py  test_graph.py
(+30 files in other folders)
